# issue_1223_napi_rs_str

./: .gitignore  Cargo.toml  README.md  index.d.ts  index.js  package.json  pnpm-lock.yaml  test.ts
src/: lib.rs
