[package]
name = "issue_1223_napi_rs_str"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2.0.0", features = ["napi4"] }
napi-derive = { version = "2.0.0" }

[build-dependencies]
napi-build = "1"